src/test/compile-fail/float-literal-inference-restrictions.rs
fn main() {
    let x: f32 = 1; //~ ERROR mismatched types
    let y: f32 = 1f; //~ ERROR mismatched types
}

